tests/ui/errors/snapshots/parse_error_trailing_plus_in_bounds.snap
---
source: tests/ui/errors/mod.rs
---
  [error] Syntax error
   ╭─[test.lis:2:18]
 1 │ 
 2 │ fn f<T: Display +>() {}
   ·                  ┬
   ·                  ╰── expected bound after `+`
   ╰────
  help: Provide a bound or remove the trailing `+` · code: [parse.syntax_error]
